--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "vue-fireapp",
   "description": "Vue firebase app wrapper as a plugin",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Kimura <joseduardo.kimura@gmail.com>",
   "license": "MIT",
-  "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
-  },
+  "private": false,
   "dependencies": {
+    "firebase": "^4.12.0",
     "vue": "^2.5.11"
   },
   "browserslist": [
